# NTTRU-NEON-TLS

./: README.md
nttru-c/: Makefile  kem.c  ntru.c  ntt.c  poly.c
nttru-c/test/: speed.c  speed.h  test_kem  test_kem.c  test_ntru  test_ntru.c  test_packing  test_poly  test_poly.c  test_speed  test_speed.c
nttru-neon/: Makefile  aes256ctr.c  baseinv_arm.S  basemul_arm.S  fqred_arm.S  freeze_arm.S  invntt_arm.S  kem.c  ntru.c  ntt.c  ntt.h  ntt_arm.S
nttru-neon-tls/OQS-OpenSSL-1.1.1-stable/: qsc.h
nttru-neon-tls/OQS-OpenSSL-1.1.1-stable/apps/: s_cb.c
nttru-neon-tls/OQS-OpenSSL-1.1.1-stable/crypto/ec/: oqs_meth.c
nttru-neon-tls/OQS-OpenSSL-1.1.1-stable/crypto/objects/: obj_dat.h  obj_mac.num
nttru-neon-tls/OQS-OpenSSL-1.1.1-stable/include/openssl/: obj_mac.h
nttru-neon-tls/OQS-OpenSSL-1.1.1-stable/ssl/: ssl_local.h  t1_lib.c  t1_trce.c
nttru-neon-tls/liboqs/docs/algorithms/kem/: nttru.md  nttru.yml
nttru-neon-tls/liboqs/src/: CMakeLists.txt  oqsconfig.h.cmake
nttru-neon-tls/liboqs/src/kem/: kem.c  kem.h
nttru-neon-tls/liboqs/src/kem/nttru/: CMakeLists.txt  kem_nttru.c  kem_nttru.h
nttru-neon-tls/liboqs/src/kem/nttru/nttru_aarch64/: aes256ctr.h  api.h  baseinv_arm.S  basemul_arm.S  crypto_stream.h  fq.c  fq.h  fqred_arm.S  freeze_arm.S  invntt_arm.S  kem.c  kem.h  macros.inc  ntru.c  ntru.h  ntt.c  ntt.h  ntt_arm.S  params.h  poly.c  poly.h  randombytes.c  randombytes.h  sha2.h  sha512.c  verify.h
